syntax = "proto3";
package mvvm;

message mvvm_ParamString
{
	string value=1;
}

message mvvm_ParamInt32
{
	int32 value=1;
}

message mvvm_ParamBool
{
	bool value=1;
}

message mvvm_ParamInt64
{
	int64 value=1;
}
